updated the backend langchain strategy

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="AI-TaskFlow - Intelligent task management powered by AI" />
     <meta name="theme-color" content="#10b981" />
     
-    <title>AI-TaskFlow</title>
+    <title>NEXGENT</title>
   </head>
   <body class="scroll-smooth">
     <div id="root"></div>
